--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>HYPDout Designs</title>
 		<script src="script.js"></script>
 		<link rel="icon" type="image/x-icon" href="/Pictures/favicon (1).ico" />
+		<link rel="stylesheet" href="https://use.typekit.net/uvp5svd.css" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<a href="index.html"
+				><img src="/Pictures/HOD LOGO Kopie.webp" alt="Logo" id="logo"
+			/></a>
+			<nav>
+				<ul>
+					<li><a href="#">A</a></li>
+					<li><a href="#">B</a></li>
+					<li><a href="#">C</a></li>
+				</ul>
+			</nav>
+		</header>
+	</body>
 </html>
