--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"
-				><img src="/Pictures/HOD LOGO Kopie.webp" alt="Logo" id="logo"
-			/></a>
 			<nav>
-				<ul>
-					<li><a href="#">A</a></li>
-					<li><a href="#">B</a></li>
-					<li><a href="#">C</a></li>
-				</ul>
-			</nav>
+			<ul>
+				<li id="logo">
+					<a href="index.html"
+						><img src="/Pictures/HOD LOGO Kopie.webp" alt="Logo"
+					/></a>
+				</li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</nav>
 		</header>
+		<main>
+			<div id="homehead">
+				<div id="video-wrapper"><video playsinline autoplay muted loop><source src="/Pictures/headbg.webm" type="video/webm">---</video>
+					<div id="hometext">
+				<h1>The new generation of <span style="color: #f7e41a">ART</span></span></h1>
+				</div>
+			</div>
+			</div>
+		</main>
 	</body>
 </html>
