--- a/index.html
+++ b/index.html
@@ -12,24 +12,131 @@
 	<body>
 		<header>
 			<nav>
-			<ul>
-				<li id="logo">
-					<a href="index.html"
-						><img src="/Pictures/HOD LOGO Kopie.webp" alt="Logo"
-					/></a>
-				</li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
+				<ul>
+					<li id="logo">
+						<a href="index.html"
+							><img src="/Pictures/HOD LOGO Kopie.webp" alt="Logo"
+						/></a>
+					</li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
 		</header>
 		<main>
 			<div id="homehead">
-				<div id="video-wrapper"><video playsinline autoplay muted loop><source src="/Pictures/headbg.webm" type="video/webm">---</video>
+				<div id="video-wrapper">
+					<video playsinline autoplay muted loop>
+						<source src="/Pictures/headbg.webm" type="video/webm" />
+						###
+					</video>
 					<div id="hometext">
-				<h1>The new generation of <span style="color: #f7e41a">ART</span></span></h1>
+						<h1>
+							The new generation of <span style="color: #f7e41a">ART</span>
+						</h1>
+					</div>
 				</div>
 			</div>
+			<h2 id="h-latest">Latest Blog Articles</h2>
+			<div class="blog">
+				<article>
+					<h2>The Power of Typography</h2>
+					<img src="/Pictures/typohead.webp" alt="Typography" id="typohead" />
+					<p>
+						When it comes to designing a conversion-oriented website, many
+						factors play a crucial role in captivating visitors and turning them
+						into loyal customers. Among these elements, typography stands tall
+						as a powerful tool that can significantly impact user experience and
+						overall website success. Often overlooked, typography has the
+						potential to make or break a user's perception of a site,
+						influencing their decision-making process. Let's explore why
+						typography matters and how it contributes to a successful
+						conversion-driven website.
+					</p>
+					<div class="olist">
+						<ol>
+							<li>
+								<span>Readability and Comprehension:</span> The primary purpose of a website
+								is to communicate its content effectively. Typography greatly
+								affects the readability and comprehension of the text. A legible
+								font, appropriate font size, and well-spaced line heights ensure
+								visitors can effortlessly consume information. When users can
+								easily understand the content, they are more likely to engage
+								and ultimately convert.
+							</li>
+							<li>
+								<span>Brand Identity and Recognition:</span> Typography plays a vital role in
+								establishing and reinforcing a brand's identity. Consistent use
+								of fonts across all touchpoints creates brand recognition and
+								strengthens brand recall. It helps users associate specific
+								fonts with a brand, establishing a sense of trust and
+								reliability. This recognition can lead to increased conversions
+								as users are more inclined to choose familiar brands over
+								unknown ones.
+							</li>
+							<li>
+								<span>Visual Hierarchy and Emphasis:</span> Strategic use of typography helps
+								in creating a clear visual hierarchy on a website. By employing
+								different font weights, sizes, and styles, designers can draw
+								attention to essential elements such as headlines,
+								calls-to-action (CTAs), and product offerings. This emphasis
+								guides users through the desired conversion funnel, increasing
+								the likelihood of a successful conversion.
+							</li>
+							<li>
+								<span>Emotional Connection and Engagement:</span> Typography can evoke
+								emotions and set the tone for a website. Whether it's playful,
+								elegant, or authoritative, the chosen fonts should align with
+								the website's overall message and target audience. When
+								typography resonates with users on an emotional level, it
+								enhances engagement and encourages visitors to explore further,
+								fostering higher conversion rates.
+							</li>
+							<li>
+								<span>Mobile Responsiveness:</span> In today's mobile-dominated world,
+								responsive design is crucial for a conversion-oriented website.
+								Typography that adapts well to various screen sizes and
+								resolutions ensures a seamless user experience on both desktop
+								and mobile devices. By providing a user-friendly interface, the
+								website becomes more accessible, encouraging users to stay
+								longer and complete their desired actions.
+							</li>
+						</ol>
+						<aside>
+							Useful links:
+							<ul>
+								<li>
+									<a href="https://www.awwwards.com/websites/typography/"
+										>Examples of good Typography</a
+									>
+								</li>
+								<li>
+									<a href="https://www.youtube.com/watch?v=88XxC0_zs74&"
+										>YouTube: 6 UI Hacks by
+										<span style="color: #f7e41a; font-weight: 500"
+											>Tim Gabe</span
+										></a
+									>
+								</li>
+								<li>
+									<a href="https://blog.hubspot.com/website/website-typography"
+										>Beginners Guide for Typography</a
+									>
+								</li>
+							</ul>
+						</aside>
+					</div>
+					<p>
+						In conclusion, typography holds immense significance in the design
+						of a conversion-oriented website. By focusing on readability,
+						establishing brand identity, creating visual hierarchy, fostering
+						emotional connections, and ensuring mobile responsiveness, designers
+						can create an impactful user experience that drives higher
+						conversion rates. When used strategically, typography becomes a
+						powerful tool that compels visitors to take action, leading to a
+						successful and thriving online presence.
+					</p>
+				</article>
 			</div>
 		</main>
 	</body>
