--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>HYPDout Designs</title>
 		<script src="script.js"></script>
-		<link rel="icon" type="image/x-icon" href="/Pictures/favicon (1).ico" />
+		<link rel="icon" type="image/x-icon" href="./Pictures/favicon (1).ico" />
 		<link rel="stylesheet" href="https://use.typekit.net/uvp5svd.css" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
@@ -15,7 +15,7 @@
 				<ul>
 					<li id="logo">
 						<a href="index.html"
-							><img src="/Pictures/HOD LOGO Kopie.webp" alt="Logo"
+							><img src="./Pictures/HOD LOGO Kopie.webp" alt="Logo"
 						/></a>
 					</li>
 					<li><a href="#">Blog</a></li>
@@ -27,7 +27,7 @@
 			<div id="homehead">
 				<div id="video-wrapper">
 					<video playsinline autoplay muted loop>
-						<source src="/Pictures/headbg.webm" type="video/webm" />
+						<source src="./Pictures/headbg.webm" type="video/webm" />
 						###
 					</video>
 					<div id="hometext">
@@ -41,7 +41,7 @@
 			<div class="blog">
 				<article>
 					<h2>The Power of Typography</h2>
-					<img src="/Pictures/typohead.webp" alt="Typography" id="typohead" />
+					<img src="./Pictures/typohead.webp" alt="Typography" id="typohead" />
 					<p>
 						When it comes to designing a conversion-oriented website, many
 						factors play a crucial role in captivating visitors and turning them
