--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			<nav>
 				<ul>
 					<li id="logo">
-						<a href="index.html"
+						<a href="index.html" title="Home"
 							><img src="./Pictures/HOD LOGO Kopie.webp" alt="Logo"
 						/></a>
 					</li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#" title="Blog">Blog</a></li>
+					<li><a href="#" title="Contact">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
