The Final Shape

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>HYPDout Designs</title>
 		<script src="script.js"></script>
 		<link rel="icon" type="image/x-icon" href="./Pictures/favicon (1).ico" />
+		<script
+			src="https://kit.fontawesome.com/f4515295a5.js"
+			crossorigin="anonymous"
+		></script>
 		<link rel="stylesheet" href="https://use.typekit.net/uvp5svd.css" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
@@ -18,7 +22,7 @@
 							><img src="./Pictures/HOD LOGO Kopie.webp" alt="Logo"
 						/></a>
 					</li>
-					<li><a href="#" title="Blog">Blog</a></li>
+					<li><a href="#h-latest" title="Blog">Blog</a></li>
 					<li><a href="#" title="Contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -37,107 +41,171 @@
 					</div>
 				</div>
 			</div>
-			<h2 id="h-latest">Latest Blog Articles</h2>
-			<div class="blog">
-				<article>
-					<h2>The Power of Typography</h2>
-					<img src="./Pictures/typohead.webp" alt="Typography" id="typohead" />
+			<h2 id="h-latest">Latest Blog Posts</h2>
+			<div id="main-content">
+				<div class="blog">
+					<article>
+						<h2>The Power of Typography</h2>
+						<img
+							src="./Pictures/typohead.webp"
+							alt="Typography"
+							id="typohead"
+						/>
+						<p>
+							When it comes to designing a conversion-oriented website, many
+							factors play a crucial role in captivating visitors and turning
+							them into loyal customers. Among these elements, typography stands
+							tall as a powerful tool that can significantly impact user
+							experience and overall website success. Often overlooked,
+							typography has the potential to make or break a user's perception
+							of a site, influencing their decision-making process. Let's
+							explore why typography matters and how it contributes to a
+							successful conversion-driven website.
+						</p>
+						<div class="olist">
+							<ol>
+								<li>
+									<span>Readability and Comprehension:</span> The primary
+									purpose of a website is to communicate its content
+									effectively. Typography greatly affects the readability and
+									comprehension of the text. A legible font, appropriate font
+									size, and well-spaced line heights ensure visitors can
+									effortlessly consume information. When users can easily
+									understand the content, they are more likely to engage and
+									ultimately convert.
+								</li>
+								<li>
+									<span>Brand Identity and Recognition:</span> Typography plays
+									a vital role in establishing and reinforcing a brand's
+									identity. Consistent use of fonts across all touchpoints
+									creates brand recognition and strengthens brand recall. It
+									helps users associate specific fonts with a brand,
+									establishing a sense of trust and reliability. This
+									recognition can lead to increased conversions as users are
+									more inclined to choose familiar brands over unknown ones.
+								</li>
+								<li>
+									<span>Visual Hierarchy and Emphasis:</span> Strategic use of
+									typography helps in creating a clear visual hierarchy on a
+									website. By employing different font weights, sizes, and
+									styles, designers can draw attention to essential elements
+									such as headlines, calls-to-action (CTAs), and product
+									offerings. This emphasis guides users through the desired
+									conversion funnel, increasing the likelihood of a successful
+									conversion.
+								</li>
+								<li>
+									<span>Emotional Connection and Engagement:</span> Typography
+									can evoke emotions and set the tone for a website. Whether
+									it's playful, elegant, or authoritative, the chosen fonts
+									should align with the website's overall message and target
+									audience. When typography resonates with users on an emotional
+									level, it enhances engagement and encourages visitors to
+									explore further, fostering higher conversion rates.
+								</li>
+								<li>
+									<span>Mobile Responsiveness:</span> In today's
+									mobile-dominated world, responsive design is crucial for a
+									conversion-oriented website. Typography that adapts well to
+									various screen sizes and resolutions ensures a seamless user
+									experience on both desktop and mobile devices. By providing a
+									user-friendly interface, the website becomes more accessible,
+									encouraging users to stay longer and complete their desired
+									actions.
+								</li>
+							</ol>
+							<aside>
+								<div>
+									<h3>Useful links:</h3>
+									<ul>
+										<li>
+											<a
+												href="https://www.awwwards.com/websites/typography/"
+												target="_blank"
+												title="Examples of good Typography"
+												>Examples of good Typography</a
+											>
+										</li>
+										<li>
+											<a
+												href="https://www.youtube.com/watch?v=88XxC0_zs74&"
+												target="_blank"
+												title="YouTube: 6 UI Hacks by Tim Gabe"
+												><i
+													class="fa-brands fa-youtube"
+													style="color: #ff0000"
+												></i>
+												YouTube: 6 UI Hacks by
+												<span style="color: #f7e41a; font-weight: 500"
+													>Tim Gabe</span
+												></a
+											>
+										</li>
+										<li>
+											<a
+												href="https://blog.hubspot.com/website/website-typography"
+												target="_blank"
+												title="Beginners Guide for Typography"
+												>Beginners Guide for Typography</a
+											>
+										</li>
+									</ul>
+								</div>
+							</aside>
+						</div>
+						<p>
+							In conclusion, typography holds immense significance in the design
+							of a conversion-oriented website. By focusing on readability,
+							establishing brand identity, creating visual hierarchy, fostering
+							emotional connections, and ensuring mobile responsiveness,
+							designers can create an impactful user experience that drives
+							higher conversion rates. When used strategically, typography
+							becomes a powerful tool that compels visitors to take action,
+							leading to a successful and thriving online presence.
+						</p>
+					</article>
+				</div>
+				<aside id="main-aside">
+					<h2>What is Typography?</h2>
 					<p>
-						When it comes to designing a conversion-oriented website, many
-						factors play a crucial role in captivating visitors and turning them
-						into loyal customers. Among these elements, typography stands tall
-						as a powerful tool that can significantly impact user experience and
-						overall website success. Often overlooked, typography has the
-						potential to make or break a user's perception of a site,
-						influencing their decision-making process. Let's explore why
-						typography matters and how it contributes to a successful
-						conversion-driven website.
+						Typography is the art and technique of arranging and designing text
+						in a visually appealing and readable manner. It involves the
+						selection of typefaces, fonts, spacing, size, and other elements to
+						enhance the overall readability and aesthetic appeal of written
+						language. Typography plays a crucial role in various forms of
+						communication, such as print media, websites, advertisements, books,
+						posters, and more.
 					</p>
-					<div class="olist">
-						<ol>
-							<li>
-								<span>Readability and Comprehension:</span> The primary purpose of a website
-								is to communicate its content effectively. Typography greatly
-								affects the readability and comprehension of the text. A legible
-								font, appropriate font size, and well-spaced line heights ensure
-								visitors can effortlessly consume information. When users can
-								easily understand the content, they are more likely to engage
-								and ultimately convert.
-							</li>
-							<li>
-								<span>Brand Identity and Recognition:</span> Typography plays a vital role in
-								establishing and reinforcing a brand's identity. Consistent use
-								of fonts across all touchpoints creates brand recognition and
-								strengthens brand recall. It helps users associate specific
-								fonts with a brand, establishing a sense of trust and
-								reliability. This recognition can lead to increased conversions
-								as users are more inclined to choose familiar brands over
-								unknown ones.
-							</li>
-							<li>
-								<span>Visual Hierarchy and Emphasis:</span> Strategic use of typography helps
-								in creating a clear visual hierarchy on a website. By employing
-								different font weights, sizes, and styles, designers can draw
-								attention to essential elements such as headlines,
-								calls-to-action (CTAs), and product offerings. This emphasis
-								guides users through the desired conversion funnel, increasing
-								the likelihood of a successful conversion.
-							</li>
-							<li>
-								<span>Emotional Connection and Engagement:</span> Typography can evoke
-								emotions and set the tone for a website. Whether it's playful,
-								elegant, or authoritative, the chosen fonts should align with
-								the website's overall message and target audience. When
-								typography resonates with users on an emotional level, it
-								enhances engagement and encourages visitors to explore further,
-								fostering higher conversion rates.
-							</li>
-							<li>
-								<span>Mobile Responsiveness:</span> In today's mobile-dominated world,
-								responsive design is crucial for a conversion-oriented website.
-								Typography that adapts well to various screen sizes and
-								resolutions ensures a seamless user experience on both desktop
-								and mobile devices. By providing a user-friendly interface, the
-								website becomes more accessible, encouraging users to stay
-								longer and complete their desired actions.
-							</li>
-						</ol>
-						<aside>
-							Useful links:
-							<ul>
-								<li>
-									<a href="https://www.awwwards.com/websites/typography/"
-										>Examples of good Typography</a
-									>
-								</li>
-								<li>
-									<a href="https://www.youtube.com/watch?v=88XxC0_zs74&"
-										>YouTube: 6 UI Hacks by
-										<span style="color: #f7e41a; font-weight: 500"
-											>Tim Gabe</span
-										></a
-									>
-								</li>
-								<li>
-									<a href="https://blog.hubspot.com/website/website-typography"
-										>Beginners Guide for Typography</a
-									>
-								</li>
-							</ul>
-						</aside>
+					<hr />
+					<h2>
+						<i class="fa-brands fa-youtube" style="color: #ff0000"></i>
+						Typography 101 on YouTube
+					</h2>
+					<div id="yt">
+						<iframe
+							width="100%"
+							height="100%"
+							src="https://www.youtube.com/embed/HnpsOtIcfbo"
+							title="Typography 101 - Web Design For Beginners"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							allowfullscreen
+						></iframe>
 					</div>
-					<p>
-						In conclusion, typography holds immense significance in the design
-						of a conversion-oriented website. By focusing on readability,
-						establishing brand identity, creating visual hierarchy, fostering
-						emotional connections, and ensuring mobile responsiveness, designers
-						can create an impactful user experience that drives higher
-						conversion rates. When used strategically, typography becomes a
-						powerful tool that compels visitors to take action, leading to a
-						successful and thriving online presence.
-					</p>
-				</article>
+				</aside>
 			</div>
 		</main>
+		<footer>
+			<hr color="#545454" style="width: 100%" />
+			<div class="footer">
+				<p id="copy">&copy; HYPDout 2023</p>
+				<ul>
+					<li><a href="#">Imprint</a></li>
+					<li><a href="#">Data privacy</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Career</a></li>
+				</ul>
+			</div>
+		</footer>
 	</body>
 </html>
