--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 					</h2>
 					<div id="yt">
 						<iframe
+							id="vid"
 							width="100%"
 							height="100%"
 							src="https://www.youtube.com/embed/HnpsOtIcfbo"
@@ -191,6 +192,10 @@
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 							allowfullscreen
 						></iframe>
+						<script>
+							vid = document.getElementById("vid");
+							vid.disablePictureInPicture = true;
+						</script>
 					</div>
 				</aside>
 			</div>
