--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</video>
 					<div id="hometext">
 						<h1>
-							The new generation of <span style="color: #f7e41a">DESIGN</span>
+							The new generation of <span style="color: #f7e41a">ART</span>
 						</h1>
 					</div>
 				</div>
