The Final Shape 2.0

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
 			<div id="main-content">
 				<div class="blog">
 					<article>
-						<h2>The Power of Typography</h2>
+						<div class="img-container">
 						<img
 							src="./Pictures/typohead.webp"
 							alt="Typography"
 							id="typohead"
 						/>
+						<h2>The Power of Typography</h2>
+						</div>
 						<p>
 							When it comes to designing a conversion-oriented website, many
 							factors play a crucial role in captivating visitors and turning
