--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							alt="Typography"
 							id="typohead"
 						/>
-						<h2>The Power of Typography</h2>
-						</div>
+						<h2>The Power of Typography</h2></div>
+						
 						<p>
 							When it comes to designing a conversion-oriented website, many
 							factors play a crucial role in captivating visitors and turning
